--- a/Plasma Donor application/implementing web application/Create UI to interact with Application/templates/login.html
+++ b/Plasma Donor application/implementing web application/Create UI to interact with Application/templates/login.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 <head>
-  <title>App Signup</title>
+  <title>App Login</title>
   <!-- Required meta tags -->
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -28,61 +28,26 @@
 
 <body
   style="background-image: linear-gradient(rgba(0,0,0,0.5),rgba(0,0,0,0.5)),url({{url_for('static',filename='healthcare.png')}})">
-
-
-  <div style="padding-bottom:100px">
-
+  <div style="padding-bottom: 225px">
     <div style="padding-top: 30px;padding-left: 365px">
       <H1 style="color: red;font-size: 100px"><b>Plasma Donor App</b></H1>
     </div>
-    <div class="container" style="padding-top: 20px">
+    <div class="container" style="padding-top: 60px">
       <div class="row justify-content-center">
         <div class="col-md-8">
           <div class="card">
-            <div class="card-header">Register</div>
+            <div class="card-header">Login</div>
 
             <div class="card-body">
-              <form method="POST" action="registration_confirmed">
-
-                <div class="row mb-3">
-                  <label for="username" class="col-md-4 col-form-label text-md-end">Username</label>
-
-                  <div class="col-md-6">
-                    <input id="name" type="text" class="form-control name=" username">
-                  </div>
-                </div>
+              <form method="POST" action="signin">
 
                 <div class="row mb-3">
                   <label for="email" class="col-md-4 col-form-label text-md-end">Email Address</label>
 
                   <div class="col-md-6">
-                    <input id="email" type="email" class="form-control" name="email">
+                    <input id="email" type="email" class="form-control" name="email" required autocomplete="email"
+                      autofocus>
 
-                  </div>
-                </div>
-
-                <div class="row mb-3">
-                  <label for="gender" class="col-md-4 col-form-label text-md-end">Gender</label>
-
-                  <div class="col-md-6">
-                    <input id="gender" type="text" class="form-control" name="text">
-
-                  </div>
-                </div>
-
-                <div class="row mb-3">
-                  <label for="age" class="col-md-4 col-form-label text-md-end">Age</label>
-
-                  <div class="col-md-6">
-                    <input id="age" type="number" class="form-control" name="age">
-                  </div>
-                </div>
-
-                <div class="row mb-3">
-                  <label for="phone" class="col-md-4 col-form-label text-md-end">Mobile No.</label>
-
-                  <div class="col-md-6">
-                    <input id="phone" type="number" class="form-control" name="phone">
                   </div>
                 </div>
 
@@ -90,25 +55,29 @@
                   <label for="password" class="col-md-4 col-form-label text-md-end">Password</label>
 
                   <div class="col-md-6">
-                    <input id="password" type="password" class="form-control name=" password">
+                    <input id="password" type="password" class="form-control" name="password" required
+                      autocomplete="current-password">
                   </div>
                 </div>
 
                 <div class="row mb-3">
-                  <label for="password-confirm" class="col-md-4 col-form-label text-md-end">Confirm Password</label>
-
-                  <div class="col-md-6">
-                    <input id="password-confirm" type="password" class="form-control" name="password_confirmation">
+                  <div class="col-md-6 offset-md-4">
+                    <div class="form-check">
+                      <input class="form-check-input" type="checkbox" name="remember" id="remember" <a
+                        class="form-check-label" href="register">
+                      Remember Me
+                      </a>
+                    </div>
                   </div>
                 </div>
 
                 <div class="row mb-0">
-                  <div class="col-md-6 offset-md-4">
+                  <div class="col-md-8 offset-md-4">
                     <button type="submit" class="btn btn-primary">
-                      Register
-                    </button>
-                    <a class="btn btn-link" href="login">
                       Login
+                    </button>
+                    <a class="btn btn-link" href="{{url_for('register')}}">
+                      Register
                     </a>
                   </div>
                 </div>
